Fixes notification alignment

--- a/rocky/assets/css/components/notifications.scss
+++ b/rocky/assets/css/components/notifications.scss
@@ -41,8 +41,12 @@ span {
   &.explanation,
   &.confirmation,
   &.system {
-    display: flex;
-    align-items: center;
+    // display: flex;
+    // align-items: center;
+
+    &::before {
+      margin-left: -2rem;
+    }
   }
 }
 
