--- a/rocky/assets/css/vendor_overrides/manon/notification.scss
+++ b/rocky/assets/css/vendor_overrides/manon/notification.scss
@@ -7,12 +7,14 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+div {
   &.error,
   &.warning,
   &.explanation,
   &.confirmation,
   &.system {
     max-width: var(--max-line-length-max-width);
+    margin: 0;
   }
 }
